# adventOfCode2024

./: .gitignore  .syntastic_cpp_config  CMakeLists.txt  README.md
common/: CMakeLists.txt  Common.cpp  Common.hpp
day1/part1/: CMakeLists.txt  main.cpp
day1/part2/: CMakeLists.txt  Main.cpp
day10/part1/: CMakeLists.txt  Main.cpp
day10/part2/: CMakeLists.txt  Main.cpp
day11/part1/: CMakeLists.txt  Main.cpp
day11/part2/: CMakeLists.txt  Main.cpp
day12/part1/: CMakeLists.txt  Main.cpp
day12/part2/: CMakeLists.txt  Main.cpp
day13/part1/: CMakeLists.txt  Main.cpp
day13/part2/: CMakeLists.txt  Main.cpp
day14/part1/: CMakeLists.txt  Main.cpp
day14/part2/: CMakeLists.txt  Main.cpp
day15/part1/: CMakeLists.txt  Main.cpp
day15/part2/: CMakeLists.txt  Main.cpp
day16/part1/: CMakeLists.txt  Main.cpp
day16/part2/: CMakeLists.txt  Main.cpp
day17/part1/: CMakeLists.txt  Main.cpp
day17/part2/: CMakeLists.txt  Main.cpp
day18/part1/: CMakeLists.txt  Main.cpp
day18/part2/: CMakeLists.txt  Input.txt  Main.cpp
day19/part1/: CMakeLists.txt  Main.cpp
day19/part2/: CMakeLists.txt  Main.cpp
day2/part1/: CMakeLists.txt  Main.cpp
day2/part2/: CMakeLists.txt  Main.cpp
day20/part1/: CMakeLists.txt  Main.cpp
day20/part2/: CMakeLists.txt  Input.txt  Main.cpp
day21/part1/: CMakeLists.txt  Main.cpp
day21/part2/: CMakeLists.txt  Main.cpp
day3/part1/: CMakeLists.txt  Main.cpp
day3/part2/: CMakeLists.txt  Input.txt  Main.cpp
day4/part1/: CMakeLists.txt  Main.cpp
day4/part2/: CMakeLists.txt  Main.cpp
day5/part1/: CMakeLists.txt  Main.cpp
(+19 files in other folders)
